force-app/main/default/objects/Sourcing_Request__c/Sourcing_Request__c.object-meta.xml
<CustomObject>
    <label>Sourcing Request</label>
    <pluralLabel>Sourcing Requests</pluralLabel>
    <description>MOCK: one row per strategic-sourcing / seasonal purchasing initiative. Creating a record launches the Skywave Sourcing Flow Orchestration; the orchestration's interactive (human) steps attach their work items to this record. Demo/stub object.</description>
    <nameField>
        <label>Sourcing Request Number</label>
        <type>AutoNumber</type>
        <displayFormat>SRC-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>