force-app/main/default/objects/Sourcing_Request__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Spend Category</label>
    <description>MOCK: the category of goods or services being sourced (free text so the orchestration stays generally applicable).</description>
    <type>Text</type>
    <length>120</length>
</CustomField>