force-app/main/default/objects/Sourcing_Request__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <label>Season</label>
    <description>MOCK: the season / period this sourcing initiative covers (e.g. "Winter 2026/27"). Passed into the Skywave Sourcing orchestration.</description>
    <type>Text</type>
    <length>80</length>
</CustomField>