force-app/main/default/objects/Sourcing_Request__c/fields/Weight_Price__c.field-meta.xml
<CustomField>
    <fullName>Weight_Price__c</fullName>
    <label>Weight: Price (%)</label>
    <description>Percentage weight applied to each bid's Price Score in the weighted evaluation. The four weights are intended to sum to 100 but the flow normalizes by their total, so any positive values work.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>40</defaultValue>
</CustomField>