force-app/main/default/objects/Sourcing_Request__c/fields/Weight_Quality__c.field-meta.xml
<CustomField>
    <fullName>Weight_Quality__c</fullName>
    <label>Weight: Quality (%)</label>
    <description>Percentage weight applied to each bid's Quality Score in the weighted evaluation.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>25</defaultValue>
</CustomField>