force-app/main/default/objects/Sourcing_Request__c/fields/Weight_Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Weight_Service_Level__c</fullName>
    <label>Weight: Service Level (%)</label>
    <description>Percentage weight applied to each bid's Service Level Score in the weighted evaluation.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>15</defaultValue>
</CustomField>