force-app/main/default/objects/Sourcing_Request__c/fields/Weight_Sustainability__c.field-meta.xml
<CustomField>
    <fullName>Weight_Sustainability__c</fullName>
    <label>Weight: Sustainability (%)</label>
    <description>Percentage weight applied to each bid's Sustainability Score in the weighted evaluation.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>20</defaultValue>
</CustomField>